immich/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`photos.mandariini.uk`)
      kind: Rule
      services:
        - name: immich-server
          namespace: immich
          port: 2283
  tls:
    secretName: mandariini-uk-tls
